added test cases for paymentshistory eventlisteners